--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,30 +24,21 @@ jobs:
       fail-fast: false
       matrix:
         platform: [
-          { name: "Windows Desktop x86_64", os: "ubuntu-latest", store-name: "steam" },
-          { name: "Windows Desktop x86_32", os: "ubuntu-latest", store-name: "steam" },
-          { name: "Windows Desktop arm64", os: "ubuntu-latest", store-name: "steam" },
-          { name: "Windows Desktop arm32", os: "ubuntu-latest", store-name: "steam" },
-          { name: "Linux x86_64", os: "ubuntu-latest", store-name: "steam" },
-          { name: "Linux x86_32", os: "ubuntu-latest", store-name: "steam" },
-          { name: "macOS", os: "macos-latest", store-name: "steam" },
+          { name: "Windows Desktop x86_64", os: "ubuntu-latest" },
+          { name: "Windows Desktop x86_32", os: "ubuntu-latest" },
+          { name: "Windows Desktop arm64", os: "ubuntu-latest" },
+          { name: "Windows Desktop arm32", os: "ubuntu-latest" },
+          { name: "Linux x86_64", os: "ubuntu-latest" },
+          { name: "Linux x86_32", os: "ubuntu-latest" },
+          { name: "macOS", os: "macos-latest" },
+          { name: "Web", os: "ubuntu-latest" },
 
-          { name: "Windows Desktop x86_64", os: "ubuntu-latest", store-name: "itch" },
-          { name: "Windows Desktop x86_32", os: "ubuntu-latest", store-name: "itch" },
-          { name: "Windows Desktop arm64", os: "ubuntu-latest", store-name: "itch" },
-          { name: "Windows Desktop arm32", os: "ubuntu-latest", store-name: "itch" },
-          { name: "Linux x86_64", os: "ubuntu-latest", store-name: "itch" },
-          { name: "Linux x86_32", os: "ubuntu-latest", store-name: "itch" },
-          { name: "macOS", os: "macos-latest", store-name: "itch" },
-          { name: "Web", os: "ubuntu-latest", store-name: "itch" },
+          { name: "macOS", os: "macos-latest" },
+          { name: "iOS", os: "macos-latest" },
 
-          { name: "macOS", os: "macos-latest", store-name: "apple-store" },
-          { name: "iOS", os: "macos-latest", store-name: "apple-store" },
+          { name: "Android", os: "ubuntu-latest" },
 
-          { name: "Android", os: "ubuntu-latest", store-name: "google-play" },
-
-          { name: "Android", os: "ubuntu-latest", store-name: "amazon" },
-          { name: "Web", os: "ubuntu-latest", store-name: "web" },
+          { name: "Web", os: "ubuntu-latest" },
         ]
 
     steps:
@@ -83,6 +74,6 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: ${{ matrix.platform.name }}-${{ matrix.platform.store-name }}
+          name: ${{ matrix.platform.name }}
           path: build/**
           if-no-files-found: error
