--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,16 +49,12 @@ jobs:
           echo "game_version=$GAME_VERSION" >> $GITHUB_OUTPUT
 
       - name: Build Game
-        if: matrix.platform.name == 'Android' && secrets.ANDROID_KEYSTORE_BASE64 != '' ||
-            matrix.platform.name == 'iOS' && secrets.DISTRIBUTION_CERTIFICATE_BASE64 != '' ||
-            matrix.platform.name == 'macOS' ||
-            matrix.platform.name == 'Web' ||
-            matrix.platform.name == 'Windows Desktop x86_64' ||
-            matrix.platform.name == 'Windows Desktop x86_32' ||
-            matrix.platform.name == 'Windows Desktop arm64' ||
-            matrix.platform.name == 'Linux x86_64' ||
-            matrix.platform.name == 'Linux x86_32'
+        # On android and iOS secrets are required
+        if: matrix.platform.name == 'iOS' && env.BUILD_IOS || matrix.platform.name == 'Android' && env.BUILD_ANDROID || (matrix.platform.name != 'iOS' && matrix.platform.name != 'Android')
         uses: blazium-engine/export-blazium-game@master
+        env:
+          BUILD_ANDROID: secrets.ANDROID_KEYSTORE_BASE64 != ''
+          BUILD_IOS: secrets.DISTRIBUTION_CERTIFICATE_BASE64 != ''
         with:
           blazium-version: ${{ env.BLAZIUM_VERSION }}
           game-name: ${{ env.GAME_NAME }}
